Fix card spacing

--- a/client/modules/QuestionAnswerPanel/QuestionAnswerPanel.scss
+++ b/client/modules/QuestionAnswerPanel/QuestionAnswerPanel.scss
@@ -3,4 +3,6 @@
   width: 100%;
   overflow: scroll;
   margin-top: 1px!important;
+  padding-left: 35px;
+  padding-right: 10px;
 }
